fixing avatars profile box showing behind content

--- a/sass/pages/_content.scss
+++ b/sass/pages/_content.scss
@@ -105,7 +105,6 @@
 
 #primary,
 #secondary {
-	z-index: 1000;
 
 	a {
 		display: inline-block;
